--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img (1).jpg" alt="Tom Ford" width="264" />
+            <img src="./images/img1.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -80,7 +80,7 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img (2).jpg" alt="Daniel Wilson" width="264" />
+            <img src="./images/img2.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
